# QS-Pro

./: .env.example  .gitignore  .noai  .nosync  Dockerfile  README.md  database.db  docker-compose.yml  locustfile.py  pyproject.toml
.github/workflows/: main.yml
app/: main.py
app/auth/: crypto.py  security.py
app/core/: exceptions.py  logging_config.py  middlewares.py  redis_cache.py  reminders.py
app/database/: config.py
app/models/: snippet.py
app/routes/: auth.py  home.py  snippets.py
app/services/: auth_service.py  html_renderer.py  snippet_service.py
app/static/css/: style.css
app/static/js/: game.js  manifest.json  offline.js  sw.js  translations.js
app/templates/: auth.html  index.html
app/templates/components/: categories.html  error_game.html  head_meta.html  mobile_nav.html  modal.html  sidebar.html  view_modal.html
quick_snippet_pro_client/: main.py  pyproject.toml
quick_snippet_pro_client/src/: config.py
quick_snippet_pro_client/src/api/: auth_api.py
quick_snippet_pro_client/src/components/: custom_input.py
quick_snippet_pro_client/src/views/: login_view.py  splash_view.py
