[tool.poetry]
name = "quick-snippet-pro"
version = "1.0.0"
description = "Multi-user PWA for snippets"
authors = ["NexO_ <mixa-amr@hotmail.com>"]
package-mode = false

[project]
name = "quick-snippet-pro"
version = "1.0.0"
description = "Multi-user PWA for snippets"
authors = [
    {name = "NexO_ / RellixCore",email = "mixa-amr@hotmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "sqlmodel (>=0.0.37,<0.0.38)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "datetime (>=6.0,<7.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "securitycore (>=1.2.2,<2.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "pygments (>=2.20.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "bandit (>=1.9.4,<2.0.0)"
]
