[project]
name = "quick-snippet-pro-client"
version = "0.1.0"
description = ""
authors = [
    {name = "NexO_",email = "mixa-amr@hotmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "flet",
    "httpx"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
